--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <a href="#">Libertians > *</a>
+        <a href="#">My Portfolio</a>
     </header>
 
     <div class="container">
